[b]Version 0.6.7[/b]:

(2009-01-11)
 * Now it's possible to player a dvd with menus from command line 
   (smplayer dvdnav://) or by selecting "dvdnav://" from the recents menu.
   It'll even work if the option "Enable DVD menus" is not checked.

(2009-01-10)
 * Fixed the initialization of the Angles menu when using dvdnav.
 * Added to the Browse menu the options 'DVD menu' and 'DVD previous menu'.

(2009-01-09)
 * Now the length of the title is updated when playing a dvd using dvdnav.

(2009-01-08)
 * (Linux) Added the option "Enable DVD menus" in Preferences->Drives. If 
   this option is checked, when you select "DVD from drive" or "DVD from 
   folder" under the Open menu, the DVD will be played using dvdnav (including 
   menus).
   Note: this is experimental, there are still a lot of things to be fixed.
   Use at own your own risk.

(2009-01-05)
 * Added an option in Preferences->Subtitles to apply the ass style defined by
   the user to ass subtitles (overriding the style defined in the ass file).

(2009-01-04)
 * Now the dvd names follow the same scheme as mplayer: 
   dvd://title/device (where device can also be a folder or iso file).
   Internally it tries to avoid the use of the string "dvd:" so it could
   be easy to add support for dvdnav:

(2008-12-31)
 * Now the correct pts option can have a value of "auto". In this case
   neither -correct-pts nor -nocorrect-pts are passed to mplayer, the demuxer
   will decide. Should fix bug #2479566.
 * The proxy settings have been moved to a config dialog inside the find
   subtitles window.


[b]Version 0.6.6[/b]:

(2008-12-28)
 * (Linux) Now the options in the dvd menus can be selected with the mouse.
   To do so, select "Activate option in DVD menus" for the left mouse button
   in Preferences -> Keyboard and mouse.
 * Implemented a different way to select the initial audio track (or restore
   the old one after a restart). 
 * (Experimental) New code to show/hide the mouse cursor in the video window.
